--- a/contactus.html
+++ b/contactus.html
@@ -7,10 +7,52 @@
   <title>Contact Form</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">IN-conUnsult</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="ourservices.html">Our services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactus.html">Contact Us</a>
+          </li>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-light" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Carousel -->
+
   <section>
     <div class="container mt-5">
       <h1 class="mb-5">Contact Us</h1>
@@ -29,51 +71,87 @@
             </div>
           </div>
 
-       
-
-        <div class="text-center mt-4">
-          <button type="submit" class="btn btn-primary">Send</button>
-        </div>
+          <div class="text-center mt-4">
+            <button type="submit" class="btn btn-primary">Send</button>
+          </div>
       </form>
     </div>
     <!--social media-->
     <style>
-        .bi-facebook{
-            color: blue;
-        }
-        .ok{
-            font-size: 50px;
-            display: flex;
-            flex-direction: row;
-        }
+      .bi-facebook {
+        color: blue;
+      }
+
+      .ok {
+        font-size: 50px;
+        gap: 1px;
+
+
+
+
+
+      }
+
+      .socialmedia ul {
+
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        gap: 60px;
+        justify-content: center;
+        align-items: center;
+
+
+      }
+
+      .socialmedia h1 {
+        margin-left: auto;
+      }
+
+      .bi-youtube {
+        color: red;
+
+      }
+
+      .bi-whatsapp {
+        color: green;
+
+      }
     </style>
   </section>
   <div>
 
   </div>
-  <section class="mt-5 ">
-    <h1 >Connect Us</h1>
-     
+  <section class=" socialmedia mt-5 ">
+    <h1>Connect Us</h1>
+
     <ul>
-    <li>
-    <i class="bi bi-facebook ok"></i></li>
-        <li>
-    <i class="bi bi-youtube ok"></i></li>
-        <li>
-    <i class="bi bi-whatsapp ok"></i></li>
+      <li>
+        <a href="https://www.facebook.com/"><i class="bi bi-facebook ok"></i></a>
+      </li>
+
+      <li>
+        <a href="https://www.youtube.com/watch?v=ZylFOtF_O0I&list=RDF5wVKovCxIw&index=2">
+          <i class="bi bi-youtube ok"></i></a>
+      </li>
+      <li>
+        <a href="https://www.whatsapp.com/">
+          <i class="bi bi-whatsapp ok"></i></a>
+      </li>
     </ul>
 
 
 
   </section>
   <!-- direct link -->
-     <h3><a href="tel:96744923">9767447923</a></h3>
-          <h3><a href="mailto:narayantamatta@yahoo.com">narayantamatta@yahoo.com</a></h3>
+  <h3><a href="tel:96744923">9767447923</a></h3>
+  <h3><a href="mailto:narayantamatta@yahoo.com">narayantamatta@yahoo.com</a></h3>
 
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
