--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bootstrap Page</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     .card:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
+      transition: 0.3s ease-in-out;
+    }
+    .index-img{
+     height: 400px;       
+    object-fit: cover; 
+    object-position: top;  
+    width: 100%;      
     }
   </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+   
+    <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-primary navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">
+      <img src="images/—Pngtree—faster logo template sunlight aviation_11020769.eps " alt="Logo" width="30" height="30" class="d-inline-block align-text-top img-fluid">
+      <a class="navbar-brand" href="#">IN-conUnsult</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -27,279 +39,147 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="ourservices.html">Our services</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+           <li class="nav-item">
+            <a class="nav-link" href="contactus.html">contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button class="btn btn-outline-light" type="submit">Search</button>
         </form>
       </div>
     </div>
   </nav>
-  <!-- silder -->
-  <main>
-    <section>
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/brienzer-rothorn-8208608_640.jpg" class=" w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/wind-energy-9762992_1280.jpg" class=" w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="images/sunflowers-1853323_1280.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+
+  <!-- Carousel -->
+  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/team-4817006_1280.jpg" class="d-block w-100 index-img" alt="Slide 1">
       </div>
-    </section>
-    <!-- Service section -->
-    <section class="mt-5 ">
-      <div class="container">
-        <div class="container">
-          <div class="row">
-            <h1 class="d-flex justify-content-center">Our Services</h1>
-            <div class="col-md-3">
-
-              <div class="card">
-                <img src="images/hangers-1850082_640.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Clothes</h5>
-                  <p class="card-text">Clothing is any item worn on a human body, typically made of fabrics or textiles.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-md-3">
-              <div class="card">
-                <img src="images/home-office-569153_640.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Laptops</h5>
-                  <p class="card-text">A laptop, also known as a notebook, is a portable computer with a built.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <img src="images/wrist-watch-2159351_640.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Watches</h5>
-                  <p class="card-text">A watch is a timepiece carried or worn by a person. It is designed to maintain a
-                    consistent.</p>
-                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#wristwatches">
-                    Launch demo modal
-                  </button>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-3">
-              <div class="card">
-                <img src="images/hands-600497_640.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Travels</h5>
-                  <p class="card-text">Travel to Mount Everest, the Amazon rainforest, extreme tourism, and adventure
-                    travel.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <!-- Add more cards as needed -->
-          </div>
-        </div>
-
-    </section>
-  </main>
-  <!---Table -->
-  <main>
-    <section class="mt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 table-responsive">
-            <h1 class="fs-3">Contact our team for more details</h1><br>
-            <table class="table table-secondary">
-              <thead>
-                <tr>
-                  <th scope="col">Sr no</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>Mark@info.com</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>Matthew@info.com</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>John</td>
-                  <td>Doe</td>
-                  <td>john@social.uk</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
-          <div class="col-md-6">
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Accordion Item #1
-                  </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                    the <code>.accordion-flush</code> class. This is the first item’s accordion body.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Accordion Item #2
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                    the <code>.accordion-flush</code> class. This is the second item’s accordion body. Let’s imagine
-                    this being filled with some actual content.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Accordion Item #3
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse"
-                  data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate
-                    the <code>.accordion-flush</code> class. This is the third item’s accordion body. Nothing more
-                    exciting happening here in terms of content, but just filling up the space to make it look, at least
-                    at first glance, a bit more representative of how this would look in a real-world application.</div>
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </div>
+      <div class="carousel-item">
+        <img src="images/job-5382501_1280.jpg" class="d-block w-100 index-img" alt="Slide 2">
       </div>
-    </section>
-  </main>
+      <div class="carousel-item">
+        <img src="images/manager-454866_1280.jpg" class="d-block w-100 index-img" alt="Slide 3">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </button>
+  </div>
 
-  <!-- Wrist Watches----- -->
-  <div class="modal fade" id="wristwatches" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!-- Modal -->
+  <div class="modal fade" id="watchModal" tabindex="-1" aria-labelledby="watchModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <h5 class="modal-title" id="watchModalLabel">Watch Details</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
-          <!-- here you can write info -->
-          <div class="container">
-            <div class="row">
-              <div class="col-md-6">
-                <img src="images/wrist-watch-2159351_640.jpg" class="img-fluid">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto nam cumque accusamus, laudantium ut
-                  quisquam corrupti corporis repellendus maiores fugiat placeat facilis vel eum alias veritatis, sunt,
-                  inventore rerum earum?</p>
-              </div>
-            </div>
-          </div>
+          <img src="images/wrist-watch-2159351_640.jpg" class="img-fluid mb-3" alt="Watch">
+          <p>This watch combines elegance and functionality with cutting-edge design.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Add to Cart</button>
         </div>
       </div>
     </div>
   </div>
-  <!----contact us -->
-  <section>
-    <form>
-      <div class="container">
-        <div class="row mt-5">
-          <h1 class="mb-5">Contact us</h1>
-          <div class="col-md-6">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Enter Your Name</label>
-              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+
+  <!-- Table and Accordion -->
+  <section class="mt-5">
+    <div class="container">
+      <div class="row">
+        <!-- Table -->
+        <div class="col-md-6">
+          <h2>Contact our team</h2>
+          <table class="table table-striped table-bordered">
+            <thead class="table-dark">
+              <tr>
+                <th>#</th>
+                <th>First</th>
+                <th>Last</th>
+                <th>Email</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr><td>1</td><td>Mark</td><td>Otto</td><td>mark@info.com</td></tr>
+              <tr><td>2</td><td>Jacob</td><td>Thornton</td><td>jacob@info.com</td></tr>
+              <tr><td>3</td><td>John</td><td>Doe</td><td>john@social.uk</td></tr>
+            </tbody>
+          </table>
+        </div>
+
+        <!-- Accordion -->
+        <div class="col-md-6">
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-one">
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div id="flush-one" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Details about item one.</div>
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-two">
+                  Accordion Item #2
+                </button>
+              </h2>
+              <div id="flush-two" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Details about item two.</div>
+              </div>
             </div>
-
-          </div>
-          <div class="col-md-3">
-
-
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-three">
+                  Accordion Item #3
+                </button>
+              </h2>
+              <div id="flush-three" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Details about item three.</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </form>
+    </div>
   </section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-    crossorigin="anonymous"></script>
+
+  <!-- Contact Form -->
+  <section class="mt-5">
+    <div class="container">
+      <h2>Contact Us</h2>
+      <form>
+        <div class="mb-3">
+          <label for="nameInput" class="form-label">Your Name</label>
+          <input type="text" class="form-control" id="nameInput" placeholder="John Doe" />
+        </div>
+        <div class="mb-3">
+          <label for="messageInput" class="form-label">Message</label>
+          <textarea class="form-control" id="messageInput" rows="3" placeholder="Your message..."></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
